--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,9 +24,9 @@ jobs:
       
       # Prepare environment
       - name: Prepare environment
-      - run: |
+        run: |
           apt install texlive-full
+          
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
-          ls
+        run: ls
