--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       # Prepare environment
       - name: Prepare environment
         run: |
-          apt install texlive-full
+          sudo apt install texlive-full
           
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
