--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,12 @@ jobs:
           
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: ls
+        run: |
+          cd doc/graphics
+          for d in *; do
+            cd d
+            for f in *.tex: do
+              latexmk -pdf $f
+            done
+            cd -
+          done
