--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,15 +26,12 @@ jobs:
       - name: Prepare environment
         run: |
           sudo apt install texlive-full
+          git clone https://github.com/teleportex/tracedraw.sty
+          cd tracedraw.sty
+          ./install
           
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Test if we can compile a simple tex file
+      - name: Small test
         run: |
-          cd doc/graphics
-          for d in *; do
-            cd d
-            for f in *.tex: do
-              latexmk -pdf $f
-            done
-            cd -
-          done
+          cd doc/graphics/templates/
+          latexmk -pdf diagram.tex
